Attempting another fix to pdf generation; Other mobile work

--- a/main.html
+++ b/main.html
@@ -2,10 +2,12 @@
 <html ng-app="inspection">
 <head>
 	<title>Home Safety Inspection</title>
-	<link rel="stylesheet/less" media="screen and (max-device-width: 600px)" href="less/inspectionMobile.less" />
 	<link rel="stylesheet/less" media="screen and (min-device-width: 601px)" href="less/inspection.less" />
+	<link rel="stylesheet/less" media="screen and (max-device-width: 600px)" href="less/inspectionMobile.less" />
 	<script src="scripts/less-1.4.1.min.js" type="text/javascript"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 <body ng-controller="InspectionCtrl">
 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
